--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.3.2"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
